# notion-sdk-py-extender

./: LICENSE  README.md  pyproject.toml
src/notion_sdk_py_extender/: __init__.py  base.py  block.py  database.py  file.py  page.py  page_properties.py  rich_text.py
tests/: main.py  test_rich_text.py
